--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -1,9 +1,10 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 dependencies {
-    compile(
+
+    implementation (
             project(":persistence"),
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-tx:$springVersion"
