--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -1,13 +1,17 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 dependencies {
-    compile(
+
+    implementation (
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-orm:$springVersion",
             "org.hibernate:hibernate-core:$hibernateVersion",
-            "com.zaxxer:HikariCP:$hikaricpVersion",
+            "com.zaxxer:HikariCP:$hikaricpVersion"
+    )
+
+    runtimeOnly (
             "com.h2database:h2:$h2Version"
     )
 }
