add simple persistence test using in memory db

--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -14,4 +14,8 @@ dependencies {
     runtimeOnly (
             "com.h2database:h2:$h2Version"
     )
+
+    testCompile (
+            "org.springframework:spring-test:$springVersion"
+    )
 }
