--- a/layers/build.gradle
+++ b/layers/build.gradle
@@ -7,7 +7,7 @@ subprojects {
 
 ext['springVersion'] = "4.3.7.RELEASE"
 ext['h2Version'] = "1.4.193"
-ext['hibernate.version'] =  ext['hibernateVersion'] = "5.2.8.Final"
+ext['hibernateVersion'] = "5.2.8.Final"
 ext['hikaricpVersion'] = "2.6.0"
 ext['groovyVersion'] = "2.4.9"
 
