--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -15,7 +15,5 @@ dependencies {
             "com.h2database:h2:$h2Version"
     )
 
-    testCompile (
-            "org.springframework:spring-test:$springVersion"
-    )
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
