--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -9,4 +9,6 @@ dependencies {
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-tx:$springVersion"
     )
+
+    testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
