--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -15,5 +15,5 @@ dependencies {
             "com.h2database:h2:$h2Version"
     )
 
-    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+    testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
