--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -6,9 +6,18 @@ dependencies {
 
     implementation (
             project(":persistence"),
+            "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-tx:$springVersion"
     )
+
+    runtimeOnly (
+            "org.slf4j:jcl-over-slf4j:$slf4jVersion",
+            "org.slf4j:log4j-over-slf4j:$slf4jVersion",
+            "org.slf4j:jul-to-slf4j:$slf4jVersion",
+            "org.codehaus.groovy:groovy:$groovyVersion",
+            "ch.qos.logback:logback-classic:$logbackVersion"
+     )
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
