--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
 
     implementation (
+            "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-orm:$springVersion",
             "org.hibernate:hibernate-core:$hibernateVersion",
@@ -12,7 +13,12 @@ dependencies {
     )
 
     runtimeOnly (
-            "com.h2database:h2:$h2Version"
+            "com.h2database:h2:$h2Version",
+            "org.slf4j:jcl-over-slf4j:$slf4jVersion",
+            "org.slf4j:log4j-over-slf4j:$slf4jVersion",
+            "org.slf4j:jul-to-slf4j:$slf4jVersion",
+            "org.codehaus.groovy:groovy:$groovyVersion",
+            "ch.qos.logback:logback-classic:$logbackVersion"
     )
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
