--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     )
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+
+    testRuntimeOnly project(':shared-resources')
 }
