--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -20,4 +20,6 @@ dependencies {
      )
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+
+    testRuntimeOnly project(':shared-resources')
 }
