hibernate needs to be in runtime of our application

--- a/layers/http/build.gradle
+++ b/layers/http/build.gradle
@@ -7,7 +7,8 @@ dependencies {
 
     runtime (
             "org.codehaus.groovy:groovy:$groovyVersion",
-            project(':shared-resources')
+            project(':shared-resources'),
+            "org.hibernate:hibernate-core:$hibernateVersion",
     )
 
     compile (
