--- a/layers/http/build.gradle
+++ b/layers/http/build.gradle
@@ -6,14 +6,19 @@ plugins {
 dependencies {
 
     runtime (
-            "org.codehaus.groovy:groovy:$groovyVersion",
             project(':shared-resources'),
             "org.hibernate:hibernate-core:$hibernateVersion",
+            logback_runtime,
     )
 
     compile (
             project(":model"),
-            "org.springframework.boot:spring-boot-starter-web"
+            "org.slf4j:slf4j-api",
+            "org.springframework.boot:spring-boot",
+            "org.springframework.boot:spring-boot-autoconfigure",
+            "org.springframework.boot:spring-boot-starter-jetty",
+            "com.fasterxml.jackson.core:jackson-databind",
+            "org.springframework:spring-webmvc"
     )
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
