--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -11,13 +11,7 @@ dependencies {
             "org.springframework:spring-tx:$springVersion"
     )
 
-    runtimeOnly (
-            "org.slf4j:jcl-over-slf4j:$slf4jVersion",
-            "org.slf4j:log4j-over-slf4j:$slf4jVersion",
-            "org.slf4j:jul-to-slf4j:$slf4jVersion",
-            "org.codehaus.groovy:groovy:$groovyVersion",
-            "ch.qos.logback:logback-classic:$logbackVersion"
-     )
+    runtimeOnly logback_runtime
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 
