--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -14,11 +14,7 @@ dependencies {
 
     runtimeOnly (
             "com.h2database:h2:$h2Version",
-            "org.slf4j:jcl-over-slf4j:$slf4jVersion",
-            "org.slf4j:log4j-over-slf4j:$slf4jVersion",
-            "org.slf4j:jul-to-slf4j:$slf4jVersion",
-            "org.codehaus.groovy:groovy:$groovyVersion",
-            "ch.qos.logback:logback-classic:$logbackVersion"
+            logback_runtime
     )
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
