use flyway and postgresql instead of h2db and hibernate create-drop

--- a/layers/http/build.gradle
+++ b/layers/http/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     runtime (
             project(':shared-resources'),
             logback_runtime,
+            "org.flywaydb:flyway-core"
     )
 
     compile (
