--- a/layers/build.gradle
+++ b/layers/build.gradle
@@ -19,11 +19,14 @@ ext {
     // Data access dependency versions
     hibernateVersion = "5.2.8.Final"
     hikaricpVersion = "2.6.0"
+    postgreSqlVersion = "42.0.0"
 
     // Test dependency versions
     h2Version = "1.4.193"
     junitVersion = "4.12"
     assertJVersion = "3.5.2"
+
+    flywayVersion = "4.1.2"
 
     logback_runtime = [
             "org.slf4j:jcl-over-slf4j:$slf4jVersion",
@@ -36,6 +39,7 @@ ext {
 
 ext['hibernate.version'] = hibernateVersion;
 ext['hikaricp.version'] = hikaricpVersion;
+ext['flyway.version'] = flywayVersion;
 
 wrapper {
     gradleVersion = "3.4.1"
