--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -14,6 +14,13 @@ dependencies {
     runtimeOnly logback_runtime
 
     testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+}
 
-    testRuntimeOnly project(':shared-resources')
+sourceSets {
+    test {
+        resources {
+            srcDirs += "$rootDir/shared/test/resources"
+            srcDirs += "$rootDir/shared/logback"
+        }
+    }
 }
