--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -13,7 +13,11 @@ dependencies {
 
     runtimeOnly logback_runtime
 
-    testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
+    testImplementation (
+            "junit:junit:$junitVersion",
+            "org.assertj:assertj-core:$assertJVersion",
+            "org.springframework:spring-test:$springVersion"
+    )
 }
 
 sourceSets {
