--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -16,7 +16,8 @@ dependencies {
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-orm:$springVersion",
             "org.hibernate:hibernate-core:$hibernateVersion",
-            "com.zaxxer:HikariCP:$hikaricpVersion"
+            "com.zaxxer:HikariCP:$hikaricpVersion",
+            "org.flywaydb:flyway-core:$flywayVersion"
     )
 
     runtimeOnly (
@@ -24,8 +25,11 @@ dependencies {
             logback_runtime
     )
 
-    testImplementation("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-    testRuntimeOnly "org.flywaydb:flyway-core:$flywayVersion"
+    testImplementation (
+            "junit:junit:$junitVersion",
+            "org.assertj:assertj-core:$assertJVersion",
+            "org.springframework:spring-test:$springVersion"
+    )
 }
 
 sourceSets {
