--- a/hexagon/persistence/src/main/resources/datasource.properties
+++ b/hexagon/persistence/src/main/resources/datasource.properties
@@ -1,3 +1,3 @@
-database.user=layers_user
-database.password=layers_user
-database.name=layers_db
+database.user=hexagon
+database.password=hexagon
+database.name=hexagon
