add jacoco code coverage

--- a/hexagon/build.gradle
+++ b/hexagon/build.gradle
@@ -1,4 +1,18 @@
 subprojects {
+
+    apply plugin: "java"
+    apply plugin: "jacoco"
+
+    jacocoTestReport {
+        reports {
+            xml.enabled false
+            csv.enabled false
+            html.destination "${buildDir}/reports/jacoco/test/html"
+        }
+    }
+
+    test.finalizedBy jacocoTestReport
+
     repositories {
         jcenter()
     }
