refactor so that model doesnt depend on persistence

--- a/layers/http/build.gradle
+++ b/layers/http/build.gradle
@@ -7,11 +7,12 @@ dependencies {
 
     runtime (
             logback_runtime,
-            "org.flywaydb:flyway-core"
+            "org.flywaydb:flyway-core",
     )
 
     compile (
             project(":model"),
+            project(":persistence"),
             "org.slf4j:slf4j-api",
             "org.springframework.boot:spring-boot",
             "org.springframework.boot:spring-boot-autoconfigure",
