--- a/layers/model/build.gradle
+++ b/layers/model/build.gradle
@@ -5,7 +5,7 @@ plugins {
 dependencies {
 
     implementation (
-            project(":persistence"),
+            "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final",
             "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-tx:$springVersion"
