--- a/layers/persistence/build.gradle
+++ b/layers/persistence/build.gradle
@@ -12,6 +12,7 @@ plugins {
 dependencies {
 
     implementation (
+            project(':model'),
             "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-orm:$springVersion",
