--- a/layers/application/build.gradle
+++ b/layers/application/build.gradle
@@ -5,15 +5,19 @@ plugins {
 dependencies {
 
     implementation (
+            project(":persistence"),
+            project(":model"),
             "org.slf4j:slf4j-api:$slf4jVersion",
-            "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final"
+            "org.springframework:spring-context:$springVersion",
+            "org.springframework:spring-tx:$springVersion"
     )
 
     runtimeOnly logback_runtime
 
     testImplementation (
             "junit:junit:$junitVersion",
-            "org.assertj:assertj-core:$assertJVersion"
+            "org.assertj:assertj-core:$assertJVersion",
+            "org.springframework:spring-test:$springVersion"
     )
 }
 
