--- a/layers/http/build.gradle
+++ b/layers/http/build.gradle
@@ -21,7 +21,10 @@ dependencies {
             "org.springframework:spring-webmvc"
     )
 
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile(
+            "org.springframework.boot:spring-boot-starter-test",
+            "org.assertj:assertj-core:$assertJVersion"
+    )
 }
 
 sourceSets {
