--- a/layers/build.gradle
+++ b/layers/build.gradle
@@ -1,3 +1,6 @@
+
+apply from: "$rootDir/gradle/versions.gradle"
+
 subprojects {
 
     apply plugin: "java"
@@ -19,26 +22,6 @@ subprojects {
 }
 
 ext {
-    // Logging dependency versions
-    slf4jVersion = "1.7.25"
-    logbackVersion = "1.2.3"
-    groovyVersion = "2.4.9"
-
-    // Spring Framework dependency versions
-    springVersion = "4.3.8.RELEASE"
-
-    // Data access dependency versions
-    hibernateVersion = "5.2.10.Final"
-    hikaricpVersion = "2.6.2"
-    postgreSqlVersion = "42.1.1"
-
-    // Test dependency versions
-    h2Version = "1.4.194"
-    junitVersion = "4.12"
-    assertJVersion = "3.5.2"
-
-    flywayVersion = "4.2.0"
-
     logback_runtime = [
             "org.slf4j:jcl-over-slf4j:$slf4jVersion",
             "org.slf4j:log4j-over-slf4j:$slf4jVersion",
