further refactor gradle scripts

--- a/layers/build.gradle
+++ b/layers/build.gradle
@@ -1,5 +1,4 @@
-
-apply from: "$rootDir/gradle/versions.gradle"
+apply from: "$rootDir/gradle/dependencies.gradle"
 
 subprojects {
 
@@ -20,20 +19,6 @@ subprojects {
         jcenter()
     }
 }
-
-ext {
-    logback_runtime = [
-            "org.slf4j:jcl-over-slf4j:$slf4jVersion",
-            "org.slf4j:log4j-over-slf4j:$slf4jVersion",
-            "org.slf4j:jul-to-slf4j:$slf4jVersion",
-            "org.codehaus.groovy:groovy:$groovyVersion",
-            "ch.qos.logback:logback-classic:$logbackVersion"
-    ]
-}
-
-ext['hibernate.version'] = hibernateVersion;
-ext['hikaricp.version'] = hikaricpVersion;
-ext['flyway.version'] = flywayVersion;
 
 wrapper {
     gradleVersion = "3.5"
