--- a/monolith/src/test/resources/datasource-test.properties
+++ b/monolith/src/test/resources/datasource-test.properties
@@ -1,3 +1,3 @@
-database.user=layers_user_test
-database.password=layers_user_test
-database.name=layers_db_test
+database.user=monolith_user_test
+database.password=monolith_user_test
+database.name=monolith_db_test
