--- a/monolith/persistence/build.gradle
+++ b/monolith/persistence/build.gradle
@@ -11,26 +11,29 @@ plugins {
 
 dependencies {
 
-    implementation (
-            project(":model"),
+    implementation project(":model"),
             "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-orm:$springVersion",
             "org.hibernate:hibernate-core:$hibernateVersion",
             "com.zaxxer:HikariCP:$hikaricpVersion",
             "org.flywaydb:flyway-core:$flywayVersion"
-    )
 
-    runtimeOnly (
-            "org.postgresql:postgresql:$postgreSqlVersion",
+    runtimeOnly "org.postgresql:postgresql:$postgreSqlVersion",
             logback_runtime
-    )
 
-    testImplementation (
-            "junit:junit:$junitVersion",
+    testImplementation "junit:junit:$junitVersion",
             "org.assertj:assertj-core:$assertJVersion",
             "org.springframework:spring-test:$springVersion"
-    )
+}
+
+sourceSets {
+    test {
+        resources {
+            srcDirs += "$rootDir/shared/test/resources"
+            srcDirs += "$rootDir/shared/logback"
+        }
+    }
 }
 
 ext.migrationDatabase = hasProperty( 'migrationDatabase' ) ? migrationDatabase : 'monolith_db'
