refactor persistence dependency from usecases to top level project

--- a/monolith/build.gradle
+++ b/monolith/build.gradle
@@ -50,6 +50,7 @@ dependencies {
             "org.postgresql:postgresql:$postgreSqlVersion"
 
     compile project(':usecases'),
+            project(':persistence'),
             "org.springframework.boot:spring-boot-starter-web"
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
