--- a/monolith/usecases/build.gradle
+++ b/monolith/usecases/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 dependencies {
     implementation project(':model'),
-            project(':persistence'),
             "org.slf4j:slf4j-api:$slf4jVersion",
             "org.springframework:spring-context:$springVersion",
             "org.springframework:spring-tx:$springVersion"
 
-    testImplementation "junit:junit:$junitVersion",
+    testImplementation project(':persistence'),
+            "junit:junit:$junitVersion",
             "org.assertj:assertj-core:$assertJVersion",
             "org.springframework:spring-test:$springVersion"
 }
