--- a/layers/build.gradle
+++ b/layers/build.gradle
@@ -1,22 +1,44 @@
-apply from: "$rootDir/gradle/dependencies.gradle"
+plugins {
+    id 'org.springframework.boot' version '1.5.3.RELEASE'
+    id 'java'
+}
 
-subprojects {
-
-    apply plugin: "java"
-    apply plugin: "jacoco"
-
-    jacocoTestReport {
-        reports {
-            xml.enabled false
-            csv.enabled false
-            html.destination "${buildDir}/reports/jacoco/test/html"
-        }
-    }
-
-    test.finalizedBy jacocoTestReport
-
+allprojects {
+    apply from: "$rootDir/gradle/dependencies.gradle"
     repositories {
         jcenter()
+    }
+}
+
+dependencies {
+
+    runtime logback_runtime,
+            "org.flywaydb:flyway-core"
+
+    compile project(":services"),
+            project(":persistence"),
+            "org.slf4j:slf4j-api",
+            "org.springframework.boot:spring-boot",
+            "org.springframework.boot:spring-boot-autoconfigure",
+            "org.eclipse.jetty:jetty-servlets",
+            "org.eclipse.jetty:jetty-webapp",
+            "com.fasterxml.jackson.core:jackson-databind",
+            "org.springframework:spring-webmvc"
+
+    testCompile "org.springframework.boot:spring-boot-starter-test",
+            "org.assertj:assertj-core:$assertJVersion"
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDirs += "$rootDir/shared/logback"
+        }
+    }
+    test {
+        resources {
+            srcDirs += "$rootDir/shared/test/resources"
+        }
     }
 }
 
