--- a/monolith/build.gradle
+++ b/monolith/build.gradle
@@ -27,6 +27,7 @@ dependencies {
             "org.springframework:spring-orm",
             "org.hibernate:hibernate-core",
             "com.zaxxer:HikariCP",
+            "net.ttddyy:datasource-proxy:1.4.2",
             "org.flywaydb:flyway-core:$flywayVersion"
     )
 
